infra/k8s/ingress-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ticketing-ingress
  namespace: ticketing
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ticketing.dev`) && PathPrefix(`/api/users`)
      kind: Rule
      services:
        - name: auth-srv
          port: 3000
    - match: Host(`ticketing.dev`) && PathPrefix(`/api/tickets`)
      kind: Rule
      services:
        - name: tickets-srv
          port: 3000
    - match: Host(`ticketing.dev`) && PathPrefix(`/api/orders`)
      kind: Rule
      services:
        - name: orders-srv 
          port: 3000
    - match: Host(`ticketing.dev`) && PathPrefix(`/api/payments`)
      kind: Rule
      services:
        - name: payments-srv
          port: 3000
    - match: Host(`ticketing.dev`)
      kind: Rule
      services:
        - name: client-srv
          port: 3000
